First WS stable commit

--- a/test/Websocket.html
+++ b/test/Websocket.html
@@ -8,7 +8,7 @@
         <script>
             let socket = io();
 
-            socket.on('hi', () => console.log('Works!'));
+            socket.on('command', () => console.log('Works!'));
         </script>
     </body>
 </html>
